--- a/src/index.css
+++ b/src/index.css
@@ -19,28 +19,27 @@ body {
 }
 
 
-.moveX {
-  display: flex;
-  animation: moveAnimation 5s linear infinite;
-  width: max-content; /* makes sure width fits content */
+.moveX{
+    animation-name: moveAnimation;
+    animation-duration: 10s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
 }
 
-@keyframes moveAnimation {
-  from {
-    transform: translateX(0);
-  }
-  to {
-    transform: translateX(-100%); /* only move halfway since duplicated */
-  }
-}
-
-
-.moveLink {
+.moveLink{
     opacity: 0;
     transition: all ease 0.3s;
 }
 
-.link:hover .moveLink {
+.link:hover .moveLink{
     opacity: 1;
 }
 
+@keyframes moveAnimation {
+    from{
+        transform: translateX(0);
+    }
+    to{
+        transform: translateX(-100%);
+    }
+}
