--- a/src/index.css
+++ b/src/index.css
@@ -12,10 +12,13 @@
 
 body {
     color: white;
-    overflow-x: hidden;
     padding: 0;
     margin: 0;
+    
 
+}
+body::-webkit-scrollbar {
+    display: none;
 }
 
 
